# icra2023_orbitalmanipulation

./: LICENSE  README.md  README.rst  get_info_from_coppeliasim.py  orbital_manipulation.py  orbital_manipulation.ttt  pyproject.toml  requirements.txt  robot_manager.py
.github/workflows/: html-publish.yml  python-publish.yml
docs/: conf.py  index.rst  requirements.txt
src/marinholab/papers/icra2023/orbital_manipulation/: __init__.py  _lbr4_kinematics.py  _main.py  _orbital_manipulation.py  _robot_manager.py  configuration.yaml  main.py  main_dqp.py
